[package]
name = "iroh-ssh"
description = "ssh without ip"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/iroh-ssh"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.2.8"
edition = "2024"

[[bin]]
name = "iroh-ssh"
required-features = ["cli"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["cli"]
cli = ["clap", "homedir", "whoami", "runas", "self-runas"]
flutter = ["flutter_rust_bridge"]

[dependencies]
anyhow = "1.0.101"
iroh = "0.94"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.9"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "ansi"] }
tracing-appender = "0.2.4"
tokio = { version = "1.49.0", features = [
    "macros",
    "io-util",
    "sync",
    "rt",
] }
z32 = "1.3"
tempfile = "3.24.0"
clap = { version = "4.5.57", features = ["derive"], optional = true }
homedir = { version = "0.3.6", optional = true }
whoami = { version = "2.1.0", optional = true }
runas = { version = "1.2.0", optional = true }
self-runas = { version = "0.1", optional = true }
flutter_rust_bridge = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies.windows-service]
version = "0.8.0"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
[profile.release]
opt-level = 3
lto = true
panic = "abort"
